# pic2sticker

./: .gitignore  CMakeLists.txt  README.md  SEO.md  build-wasm.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  setup-deps.sh  vite.config.ts  wrangler.jsonc
about/: index.html
build_module/: CMakeCache.txt  Makefile  cmake_install.cmake
gallery/: index.html
how-i-ported-rembg-to-onnxruntime-web/: index.html
public/models/: postprocess.js  postprocess.wasm
src/: App.tsx  index.css
src/components/: image-result.tsx  image-upload-zone.tsx
src/components/ui/: button.tsx
src/lib/: rembg.ts
src/pages/: about.tsx  gallery.tsx  how-i-ported.tsx
src/wasm/: postprocess.cpp
